@@ -1,3 +1,5 @@
+* Allow lost and found on inventory moves of shipments
+* Add waste locations on warehouses
 * Add warning to prevent move in the future
 * Add relate to open inventory lines
 * Use simplified view for moves list on shipments
